MDEV-8316: debugger aborting because missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "any_slave_sql_running"

Fix a handful of "return" that should be DBUG_RETURN in sql/rpl_mi.cc.